# leviosa

./: .gitignore  CLAUDE.md  PLAN.md  README.md  example_requests_input_file.json  install.ps1  leviosa.py  module_creation.md  pyproject.toml  traffic.py
core/: analysers.py  config.py  cookies.py  filters.py  loader.py  logdb.py  models.py  parsers.py  requester.py  runner.py
modules/: adminfinder.py  authz.py  base.py  cors.py  csp.py  errorpages.py  methodtamper.py  passthrough.py  pathfuzz.py  securityheaders.py  sensitivefiles.py  sqli.py  versiondisclosure.py
tests/: conftest.py  test_adminfinder.py  test_analysers.py  test_authz.py  test_cli.py  test_config.py  test_cookies.py  test_cors.py  test_csp.py  test_errorpages.py  test_filters.py  test_integration.py  test_loader.py  test_logdb.py  test_methodtamper.py  test_models.py  test_module_runner.py  test_parsers.py  test_pathfuzz.py  test_requester.py  test_securityheaders.py  test_sensitivefiles.py  test_sqli.py  test_traffic.py  test_versiondisclosure.py
