[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "leviosa"
version = "0.1.0"
description = "A lightweight web penetration testing helper tool"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-cov>=5",
]

[project.scripts]
leviosa = "leviosa:main"
leviosa-traffic = "traffic:main"

[tool.setuptools]
py-modules = ["leviosa", "traffic"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
